# xData

./: README.md  docker-compose.yml
backend/: .gitignore  dockerfile  main.py  pyproject.toml
backend/tests/: test_backend.py
frontend/: dockerfile  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  FileUpload.jsx  SearchTranscription.jsx  TranscriptionList.jsx
frontend/src/tests/: FileUpload.test.jsx  TranscriptionList.test.js
